--- a/webapp/WEB-INF/vistas/profile.html
+++ b/webapp/WEB-INF/vistas/profile.html
@@ -783,10 +783,16 @@
 
                                           </div>
 
-                                          <!-- ADOPTADOS -->
+                                          <!-- MIS MASCOTAS -->
                                           <div class="tab-pane fade " id="v-pills-mascotas-tab" role="tabpanel"
                                              aria-labelledby="v-pills-mascotas-tab">
-                                             <h4>Mis Mascotas</h4>
+                                             <div class="d-flex align-items-center justify-content-between">
+                                                <h4>Mis Mascotas</h4>
+                                                <div >
+                                                   <a href="new-mascot.html" class="btn btn-primary">Agregar nueva..</a>
+                                                </div>
+                                             </div>
+                                             
                                              <hr>
                                              <div class="row ">
                                                 <div class="col-6 mt-5">
